fix:change the margin in landing page for mobile - problem: on mobile devices, the text is hidden and cannot be read - solution: add top margin for h1 tag

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -300,7 +300,13 @@ footer{
 /* ***************** Home  ************** */
 .home-wrapper{
     max-width: 600px;
-    margin: 1rem 1rem 0 1.5rem;
+    margin: 1rem 0;
+}
+
+.home-subtitle{
+    color: var(--white);
+    font-size: bold;
+    padding-bottom: 1rem;
 }
 
 .btn-home{
